Fixed Z-Index of Cards

--- a/elastic-collections/style.css
+++ b/elastic-collections/style.css
@@ -157,7 +157,7 @@ p:hover {
   box-shadow: 0px 0px 50px yellow;
   transition: all 0.5s ease-in-out;
   transform: rotateY(180deg) scale(1.5);
-  z-index: 1;
+  z-index: 2;
 }
 
 .show {
